deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task-manager-deployment
  namespace: task-manager
spec:
  replicas: 1
  selector:
    matchLabels:
      app: task-manager
  template:
    metadata:
      labels:
        app: task-manager
    spec:
      containers:
        - name: task-manager
          image: dmestry06/task-manager-app:latest
          ports:
            - containerPort: 80
