service.yaml
apiVersion: v1
kind: Service
metadata:
  name: task-manager-service
  namespace: task-manager
  labels:
    app: task-manager
spec:
  type: ClusterIP
  selector:
    app: task-manager
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
